feat: modified package main

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "udemy-18forkify",
   "version": "1.0.0",
   "description": "udemy js course 287-init forkify",
-  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html"
   },
   "author": "catzillaorz",
   "license": "MIT",
