--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "catzillaorz",
   "license": "MIT",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "parcel": "^2.0.0-rc.0",
     "sass": "^1.26.10"
   }
