--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "catzillaorz",
   "license": "MIT",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0-rc.0",
-    "parcel": "^2.0.0-rc.0",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "parcel": "^2.0.0-beta.1"
   }
 }
