feat: end of this project, keep going!

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "udemy-18forkify",
   "version": "1.0.0",
   "description": "udemy js course 287-init forkify",
+  "default": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "catzillaorz",
   "license": "MIT",
